# Macropy

./: .flake8  .gitignore  GUI_Helper.py  Makefile  README.md  common.py  explorerHelper.py  keyboardHelper.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  systemHelper.py  webrowser.py  windowHelper.py
PurePythonVersion/: GUI_Helper.py  common.py  explorerHelper.py  image_inverter.py  main.py  requirements.txt  systemHelper.py  windowHelper.py
macropy/: __main__.py  common.cp310-win_amd64.pyd  common.pyi  eventListeners.cp310-win_amd64.pyd  explorerHelper.cp310-win_amd64.pyd  explorerHelper.pyi  imageInverter.cp310-win_amd64.pyd  keyboardHelper.cp310-win_amd64.pyd  main.py  scriptController.cp310-win_amd64.pyd  scriptController.pyi  systemHelper.cp310-win_amd64.pyd  windowHelper.cp310-win_amd64.pyd
macropy/cython_extensions/common/: common.c
macropy/cython_extensions/eventListeners/: eventListeners.c
macropy/cython_extensions/explorerHelper/: explorerHelper.c  explorerHelper.pyx
src/: __main__.py  hookManager.py  scriptConfigs.py
src/cythonExtensions/: __init__.py  common.cp310-win_amd64.pyd  common.pyi  eventListeners.cp310-win_amd64.pyd  eventListeners.pyi  explorerHelper.cp310-win_amd64.pyd  imageInverter.cp310-win_amd64.pyd  keyboardHelper.cp310-win_amd64.pyd  keyboardHelper.pyi  scriptController.cp310-win_amd64.pyd  scriptController.pyi  systemHelper.cp310-win_amd64.pyd  systemHelper.pyi  windowHelper.cp310-win_amd64.pyd  windowHelper.pyi
typings/: common.pyi  eventListeners.pyi  explorerHelper.pyi  keyboardHelper.pyi  scriptController.pyi  systemHelper.pyi  windowHelper.pyi
(+119 files in other folders)
