[metadata]
name = kb_macropy
version = 1.1.10
description = Keyboard listener and automation script.
long_description_content_type = text/markdown
long_description = file: README.md
author = Ahmed Tarek
author_email = ahmedtarek4377@gmail.com
license = MIT
license_files = LICENSE
platforms = win32
url = https://github.com/Ryen-042/macropy
keywords = keyboard, hotkey, automation, script, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:
package_dir =
    macropy = src
install_requires = file: requirements.txt

# [options.packages.find]
# where = macropy
# exclude =

[options.package_data]
macropy =
    Images/static/*
    SFX/*

# * =
#     *.pyi
#     *.pxd

# [options.exclude_package_data]
# * =
#     *.pyc
#     __pycache__
#     *.pxd

[options.entry_points]
console_scripts =
    macropy = macropy.__main__:main
